# tufty2040

./: .gitignore  README.md  main.py  orig.py
tufty-cpp/: CMakeCache.txt  CMakeLists.txt  build_filesystem.py  main.cpp
